--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -9,6 +9,7 @@ on:
       - 'n8n/**'
       - 'n8n-runners/**'
       - '*.js'
+      - 'package.json'
       - '.github/workflows/build-images.yml'
   workflow_dispatch:
   schedule:
@@ -31,17 +32,17 @@ jobs:
           - name: n8n
             context: .
             dockerfile: n8n/Dockerfile
-            image_source: https://github.com/IA-Generative/n8n
+            image_source: https://github.com/ia-generative/n8n
             tags: |
-              ghcr.io/${{ github.repository_owner }}/n8n:latest
-              ghcr.io/${{ github.repository_owner }}/n8n:${{ github.sha }}
+              ghcr.io/ia-generative/n8n:latest
+              ghcr.io/ia-generative/n8n:${{ github.sha }}
           - name: n8n-runners
             context: .
             dockerfile: n8n-runners/Dockerfile
-            image_source: https://github.com/IA-Generative/n8n-runners
+            image_source: https://github.com/ia-generative/n8n-runners
             tags: |
-              ghcr.io/${{ github.repository_owner }}/n8n-runners:latest
-              ghcr.io/${{ github.repository_owner }}/n8n-runners:${{ github.sha }}
+              ghcr.io/ia-generative/n8n-runners:latest
+              ghcr.io/ia-generative/n8n-runners:${{ github.sha }}
     
     steps:
       - name: Checkout repository
@@ -61,7 +62,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/${{ matrix.name }}
+          images: ghcr.io/ia-generative/${{ matrix.name }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
