--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -48,6 +48,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
+      - name: Extract version from Dockerfile
+        id: version
+        run: |
+          VERSION=$(grep -oP '^FROM.*:\K[0-9]+\.[0-9]+\.[0-9]+' ${{ matrix.dockerfile }})
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Extracted version: $VERSION"
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
@@ -68,10 +75,12 @@ jobs:
             type=ref,event=pr
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=${{ steps.version.outputs.version }}
           labels: |
             org.opencontainers.image.source=${{ matrix.image_source }}
             org.opencontainers.image.title=${{ matrix.name }}
             org.opencontainers.image.description=Custom n8n image with OpenTelemetry instrumentation
+            org.opencontainers.image.version=${{ steps.version.outputs.version }}
       
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
