chore: update n8n-nodes-imap dependency to use caret versioning and enable npm in Renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,9 @@
   "ignorePaths": [
     "**/node_modules/**"
   ],
+  "npm": {
+    "enabled": true
+  },
   "packageRules": [
     {
       "matchCategories": [
@@ -205,6 +208,7 @@
   ],
   "assignees": [],
   "reviewers": [],
+  "recreateClosed": true,
   "commitMessageAction": "Update",
   "commitMessagePrefix": "⬆️ ",
   "rebaseWhen": "behind-base-branch",
