feat: enable n8n custom nodes in nodes/package.json

--- a/renovate.json
+++ b/renovate.json
@@ -164,6 +164,7 @@
       }
     },
     {
+      "enabled": true,
       "description": "n8n custom nodes in nodes/package.json",
       "matchDatasources": [
         "npm"
