fix: update paths in build-images.yml to include package.json and package-lock.json recursively

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -9,7 +9,8 @@ on:
       - 'n8n/**'
       - 'n8n-runners/**'
       - '*.js'
-      - 'package.json'
+      - '**/package.json'
+      - '**/package-lock.json'
       - '.github/workflows/build-images.yml'
   workflow_dispatch:
   schedule:
