--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -53,8 +53,11 @@ jobs:
         id: version
         run: |
           VERSION=$(grep -oP '^FROM.*:\K[0-9]+\.[0-9]+\.[0-9]+' ${{ matrix.dockerfile }})
+          SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version_with_sha=${VERSION}-${SHORT_SHA}" >> $GITHUB_OUTPUT
           echo "Extracted version: $VERSION"
+          echo "Version with SHA: ${VERSION}-${SHORT_SHA}"
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -77,6 +80,7 @@ jobs:
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
             type=raw,value=${{ steps.version.outputs.version }}
+            type=raw,value=${{ steps.version.outputs.version_with_sha }}
           labels: |
             org.opencontainers.image.source=${{ matrix.image_source }}
             org.opencontainers.image.title=${{ matrix.name }}
