fix: add allowedVersions constraint for n8n base and n8n-runners images

--- a/renovate.json
+++ b/renovate.json
@@ -55,7 +55,8 @@
       },
       "major": {
         "automerge": false
-      }
+      },
+      "allowedVersions": "<2"
     },
     {
       "description": "n8n-runners base image in n8n-runners/Dockerfile",
@@ -88,7 +89,8 @@
       },
       "major": {
         "automerge": false
-      }
+      },
+      "allowedVersions": "<2"
     },
     {
       "description": "OpenTelemetry dependencies in global/package.json",
