--- a/n8n/Dockerfile
+++ b/n8n/Dockerfile
@@ -2,21 +2,8 @@ FROM n8nio/n8n:1.123.16
 
 USER root
 
-# Install required packages
-RUN echo "Installing required packages..." && \
-    apk add --no-cache \
-    curl \
-    gettext \
-    coreutils \
-    openssl \
-    ca-certificates \
-    musl-dev && \
-    echo "Curl installed successfully: $(curl --version | head -n 1)" && \
-    echo "Envsubst installed successfully: $(envsubst --version | head -n 1)"
-
-WORKDIR /home/node/.n8n/nodes
 COPY ../nodes/ /home/node/.n8n/nodes
-RUN npm install
+RUN [[ -d /home/node/.n8n/nodes/node_modules ]] || exit 1
 
 # Switch to n8n's installation directory
 WORKDIR /usr/local/lib/node_modules/n8n
