feat: add step to install node dependencies in build workflow

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -49,6 +49,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
+      - name: Install nodes dependencies
+        run: |
+          cd nodes
+          npm install
+      
       - name: Extract version from Dockerfile
         id: version
         run: |
