fix: remove NODE_OPTIONS environment variable from Dockerfile

--- a/n8n/Dockerfile
+++ b/n8n/Dockerfile
@@ -21,13 +21,12 @@ RUN [[ -d /home/node/.n8n/nodes/node_modules ]] || exit 1
 WORKDIR /usr/local/lib/node_modules/n8n
 
 COPY ../global/* .
-RUN sh install_global.sh
+# RUN sh install_global.sh
 
 COPY ../tracing.js ../n8n-otel-instrumentation.js /usr/local/lib/node_modules/n8n/
 
-ENV NODE_OPTIONS="-r @opentelemetry/auto-instrumentations-node/register -r /usr/local/lib/node_modules/n8n/tracing.js"
-
 USER node
+WORKDIR /home/node
 
 # Set image repository label
 LABEL org.opencontainers.image.source="https://github.com/ia-generative/n8n"
