--- a/n8n-runners/Dockerfile
+++ b/n8n-runners/Dockerfile
@@ -1,4 +1,5 @@
-FROM n8nio/runners:1.123.20
+# Image name: n8n-runners
+FROM n8nio/runners:1.123.20 
 
 COPY ../nodes/ /home/node/.n8n/nodes
 RUN [[ -d /home/node/.n8n/nodes/node_modules ]] || exit 1
